--- a/pur_beurre_project/foodSearch/templates/foodSearch/results.html
+++ b/pur_beurre_project/foodSearch/templates/foodSearch/results.html
@@ -30,10 +30,32 @@
                 </a>
                 <a href="/detail/{{ product.id }}/">En savoir plus sur ce produit</a><br>
 
-                {% if favorite %}
-                  <a href="/delete_favorite/{{ substitute.id }}/{{ product.id }}/{{ page }}/" value="" class="text-white"><span class='fas fa-floppy-o'></span> Retirer ce substitut de mes favoris</a>
+                {% if user.is_authenticated %}
+                  {% if favorite %}
+                    <a href="/delete_favorite/{{ substitute.id }}/{{ product.id }}/{{ page }}/" value="" class="text-white"><span class='fas fa-floppy-o'></span> Retirer ce substitut de mes favoris</a>
+                  {% else %}
+                    <a href="/save_favorite/{{ substitute.id }}/{{ product.id }}/{{ page }}/" value="" class="text-white"><span class='fas fa-floppy-o'></span> Sauvegarder</a>
+                  {% endif %}
                 {% else %}
-                  <a href="/save_favorite/{{ substitute.id }}/{{ product.id }}/{{ page }}/" value="" class="text-white"><span class='fas fa-floppy-o'></span> Sauvegarder</a>
+                  <a data-toggle="modal" data-target="#modalNotConnected" class="text-white"><span class='fas fa-floppy-o'></span> Sauvegarder</a>
+                  <div id="modalNotConnected" class="modal" tabindex="-1" role="dialog">
+                    <div class="modal-dialog" role="document">
+                      <div class="modal-content">
+                        <div class="modal-header">
+                          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                          </button>
+                        </div>
+                        <div class="modal-body">
+                          <p class="text-secondary">Pour enregistrer ce produit dans votre liste de favoris <br>Veuillez vous connecter ou créer votre compte.</p>
+                        </div>
+                        <div class="modal-footer">
+                          <button type="button" class="btn btn-secondary" data-dismiss="modal">Fermer</button>
+                          <a href="{% url 'login' %}"><button type="button" class="btn btn-primary">Se connecter</button></a>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
                 {% endif %}
 
                 {% if substitute.nutrition_grade_fr == 'a' %}
