--- a/pur_beurre_project/foodSearch/templates/registration/login.html
+++ b/pur_beurre_project/foodSearch/templates/registration/login.html
@@ -35,7 +35,7 @@
             <input type="hidden" name="text" value="{{ next }}">
           </form>
           <p>
-            Vous n'avez tooujours pas de compte Pur Beurre? <br>
+            Vous n'avez toujours pas de compte Pur Beurre? <br>
             pas de panique, créez-en un :
           </p>
           <a class="btn btn-secondary" href="{% url 'foodSearch:register' %}" class="btn">Créer un compte</a>
